# Assignment8/backend/src/model/posts.js
@@ -25,3 +25,43 @@ export async function retrievePosts(userID) {
   const {rows} = await pool.query(postsQuery, [userID]);
   return rows;
 }
+
+/**
+ * Grabs all Groups and Stores ID
+ * @returns {object} All Groups
+ */
+export async function retrieveGroups() {
+  const result = await pool.query(`
+    SELECT
+      groupid,
+      data->>'groupname' AS groupname,
+      data->>'description' AS description
+    FROM groups;
+  `);
+  return result.rows;
+}
+
+/**
+ *
+ * @param {string} groupID - Group UUID
+ * @returns {object} Group Posts
+ */
+export async function retrieveGroupPosts(groupID) {
+  const query = `
+    SELECT
+      p.postid AS "postID",
+      p.userid AS "userID",
+      u.data->'user'->>'name' AS "username",
+      u.data->'user'->>'email' AS "email",
+      p.data->>'content' AS "content",
+      p.data->>'date-posted' AS "date",
+      (p.data->>'ispublic')::boolean AS "isPublic"
+    FROM posts p
+    JOIN users u ON p.userid = u.id
+    WHERE p.groupid = $1
+    ORDER BY (p.data->>'date-posted')::timestamptz DESC;
+  `;
+
+  const result = await pool.query(query, [groupID]);
+  return result.rows;
+}
