# Assignment8/backend/src/route/posts.js
@@ -26,3 +26,33 @@ export async function getMyPosts(req, res) {
 
   return res.status(200).json(posts);
 }
+
+/**
+ *
+ * @param {string} req - no used
+ * @param {string} res - Status Code
+ * @returns {string} - All Group Names, ID, Desc
+ */
+export async function getGroups(req, res) {
+  const groups = await postsModel.retrieveGroups();
+
+  return res.status(200).json(groups);
+}
+
+/**
+ *
+ * @param {string} req - Group UUID
+ * @param {string} res - Status Code
+ * @returns {object} - All Posts from Named Group
+ */
+export async function getGroupPosts(req, res) {
+  const {groupID} = req.params;
+  const posts = await postsModel.retrieveGroupPosts(groupID);
+
+  console.log(posts);
+
+  return res.status(200).json([{
+    groupID,
+    posts
+  }]);
+}
